add level editor

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 	<head>
 		<title>Frog game</title>
 		<meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" type="text/css" href="assets/style.css">
-		<script type="text/javascript" src="assets/app.js"></script>
+		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+		<script type="text/javascript" src="assets/js/app.js"></script>
 	</head>
 	<body>
 		<canvas id="canvas" width="640" height="480"></canvas>
