Edit structure of files and ended level editor

--- a/level_editor/editor.html
+++ b/level_editor/editor.html
@@ -36,14 +36,13 @@
 				</div>
 				<br />
 				<button id="button_erase">Clear map</button>
-				<button id="button_export">Export map</button>
 				<br />
 				<br />
 				<p>Filename to Save As:</p>
-				<input id="inputFileNameToSaveAs"></input>
+				<input id="inputFileNameToSaveAs"></input> <button id="button_export">Export map</button>
 				<p>Select a File to Load:</p>
 				<input type="file" id="fileToLoad">
-				<button id="button_load">Load Selected File</button>
+				<button id="button_load">Import map</button>
 
 			</div>
 
