--- a/game/index.html
+++ b/game/index.html
@@ -3,6 +3,7 @@
 		<title>Frog game</title>
 		<meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+        <script type="text/javascript" src="assets/js/levels.js"></script>
 		<script type="text/javascript" src="assets/js/app.js"></script>
 	</head>
 	<body>
