add textarea for raw json in editor, create first level and other

--- a/level_editor/editor.html
+++ b/level_editor/editor.html
@@ -39,10 +39,13 @@
 				<br />
 				<br />
 				<p>Filename to Save As:</p>
-				<input id="inputFileNameToSaveAs"></input> <button id="button_export">Export map</button>
+				<input id="input_file_name_to_save_as"></input> <button id="button_export">Export map</button>
 				<p>Select a File to Load:</p>
-				<input type="file" id="fileToLoad">
+				<input type="file" id="file_to_load">
 				<button id="button_load">Import map</button>
+				<br/>
+				<br/>
+				<textarea id="json_to_load"></textarea>
 
 			</div>
 
